--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 TOKEN=6563649253:AAGJEZyVYq_6g2dbaow007zQvStD4Ppnmzg
+MEDIA_DESTINATION=/Users/omurbekabakirov/PycharmProjects/lesson 1/media/
+GROUP_ID=-4198335625
